styles refactor with variables

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,7 +30,7 @@ body {
   padding: 10px 25em;
   display: flex;
   border-bottom: $border;
-  background-color: white;
+  background-color: #fff;
   height: 2em;
 }
 
@@ -62,8 +62,8 @@ body {
 }
 
 .nav-btn {
-  color: #666666;
-  font-size: 22px;
+  color: $grey1;
+  font-size: $biggest;
   padding: 0 25px;
 }
 
@@ -85,7 +85,7 @@ body {
 .nav-ad {
   text-decoration: none;
   text-align: center;
-  font-size: 12px;
+  font-size: $very-small;
 
   &:hover {
     text-decoration: underline;
@@ -109,7 +109,7 @@ body {
 .header-box {
   margin: -0.5em;
   overflow: hidden;
-  border-radius: 10px 10px 0 0;
+  border-radius: $top-radius;
 }
 
 .sc-img {
@@ -117,7 +117,7 @@ body {
 }
 
 .infos {
-  border-bottom: 1px solid #ebebeb;
+  border-bottom: $border;
   padding: 1em 0.5em;
 }
 
@@ -126,13 +126,13 @@ body {
 }
 
 .category {
-  padding: 0 0 1em 0;
-  font-size: 12px;
-  color: #666666;
+  padding: 0.2em 0 1em 0;
+  font-size: $small;
+  color: $grey1;
 }
 
 .profile-link {
-  color: #797979;
+  color: $grey2;
   font-weight: bold;
   text-decoration: none;
 
@@ -151,11 +151,11 @@ body {
 }
 
 .btn-follow {
-  background-color: #0a66c2;
-  color: white;
+  background-color: $link;
+  color: #fff;
   font-weight: bold;
   padding: 0.3em 1.7em;
-  border-radius: 15px;
+  border-radius: $radius;
   margin-right: 0.5em;
 
   &:hover {
@@ -165,11 +165,11 @@ body {
 
 .btn-website {
   background-color: transparent;
-  color: #0a66c2;
+  color: $link;
   font-weight: bold;
-  border: 1px solid #0a66c2;
+  border: 1px solid $link;
   padding: 0.3em 0.6em;
-  border-radius: 15px;
+  border-radius: $radius;
   margin-right: 0.5em;
 
   &:hover {
@@ -180,10 +180,10 @@ body {
 
 .btn-more {
   background-color: transparent;
-  color: #757575;
-  border: 1px solid #757575;
+  color: $grey3;
+  border: 1px solid $grey3;
   padding: 0.3em 0.6em;
-  border-radius: 15px;
+  border-radius: $radius;
 
   &:hover {
     background-color: #ebebeb;
@@ -202,12 +202,12 @@ body {
   text-decoration: none;
   padding: 0.5em 0;
   font-weight: bold;
-  color: #a8a8a8;
+  color: $grey4;
 }
 
 .selected {
-  color: #308050;
-  border-bottom: 2px solid #308050;
+  color: $green;
+  border-bottom: 2px solid $green;
 }
 
 // ------------------------------ About Styles ------------------------------
@@ -226,7 +226,7 @@ body {
 
 .section-title {
   padding: 1em 0 0 0;
-  font-size: 16pt;
+  font-size: $biggest;
 }
 
 .about-description {
@@ -234,14 +234,14 @@ body {
 }
 
 .about-text-description {
-  font-size: 10pt;
-  color: #797979;
+  font-size: $small;
+  color: $grey2;
   padding-bottom: 1em;
 }
 
 .section-subtitle {
   padding: 1em 0 0 0;
-  font-size: 10pt;
+  font-size: $small;
 }
 
 .link {
@@ -253,21 +253,21 @@ body {
 }
 
 .about-link {
-  font-size: 10pt;
+  font-size: $small;
   color: #0859aa;
   font-weight: bold;
   padding: 0.5em 0;
 }
 
 .category-text {
-  font-size: 10pt;
-  color: #797979;
+  font-size: $small;
+  color: $grey2;
   padding: 0.5em 0;
 }
 
 .category-text-alt {
-  font-size: 10pt;
-  color: #797979;
+  font-size: $small;
+  color: $grey2;
 }
 
 .info-icon {
@@ -287,13 +287,13 @@ body {
 .side-panel {
   background-color: #fff;
   border-radius: 10px;
-  border: 1px solid #ededed;
+  border: $border;
   padding: 0.5em 0.5em 0;
 }
 
 .sidepanel-title {
   padding: 0.5em 0.5em;
-  font-size: 14pt;
+  font-size: $big;
   font-weight: lighter;
 }
 
@@ -308,18 +308,18 @@ body {
 }
 
 .company-name {
-  font-size: 12pt;
+  font-size: $normal;
 }
 
 .company-industry {
   margin-top: 0.3em;
-  font-size: 8pt;
+  font-size: $very-small;
 }
 
 .company-followers {
   margin-top: 0.5em;
-  color: #757575;
-  font-size: 8pt;
+  color: $grey3;
+  font-size: $very-small;
 }
 
 .similar-link {
@@ -328,8 +328,8 @@ body {
 
 .similar {
   text-align: center;
-  font-size: 12pt;
-  color: #757575;
+  font-size: $normal;
+  color: $grey3;
   padding: 0.7em 0;
 }
 
@@ -343,9 +343,9 @@ body {
   margin-top: 0.5em;
   padding: 0.2em 1em;
   border-radius: 13px;
-  color: #757575;
+  color: $grey3;
   background-color: transparent;
-  border: 1px solid #757575;
+  border: 1px solid $grey3;
 
   &:hover {
     background-color: #ebebeb;
@@ -363,16 +363,16 @@ body {
 }
 
 .contact-items {
-  font-size: 10pt;
+  font-size: $small;
   align-items: center;
   display: flex;
   background-color: #fff;
   padding: 0.5em;
-  border-radius: 10px 10px 0 0;
+  border-radius: $top-radius;
 }
 
 .contact-link {
-  font-size: 12pt;
+  font-size: $normal;
   color: black;
   padding-left: 1em;
 }
