--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,2 +1,17 @@
 $background-color: #f3f2ef;
 $border: 1px solid #ededed;
+$radius: 15px;
+$top-radius: 10px 10px 0 0;
+
+$grey1: #666666;
+$grey2: #797979;
+$grey3: #757575;
+$grey4: #a8a8a8;
+$link: #0a66c2;
+$green: #308050;
+
+$very-small: 8pt;
+$small: 10pt;
+$normal: 12pt;
+$big: 14pt;
+$biggest: 16pt;
