--- a/src/App.scss
+++ b/src/App.scss
@@ -27,6 +27,7 @@ body {
 .Navbar {
   top: 0;
   position: sticky;
+  z-index: 1;
   padding: 10px 25em;
   display: flex;
   border-bottom: $border;
@@ -116,9 +117,22 @@ body {
   max-width: 100%;
 }
 
+.profile-image {
+  position: absolute;
+  top: 0;
+  padding-left: 1em;
+  margin-top: 10em;
+}
+
+.profile-img {
+  width: 100px;
+  height: 100px;
+  border: 2px solid #fff;
+}
+
 .infos {
   border-bottom: $border;
-  padding: 1em 0.5em;
+  padding: 4em 0.5em 1em 1em;
 }
 
 .description {
@@ -281,7 +295,7 @@ body {
 
 .Pages {
   width: 20em;
-  margin-top: -6em;
+  margin-top: -9.5em;
 }
 
 .side-panel {
